--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "react-icons": "^4.3.1",
+    "sass": "^1.43.4",
+    "stripe": "^8.188.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
